@@ -58,6 +58,8 @@ your system, but the later doesn't
 @item Fixed a call of select-workspace-from-first [Michal Maruska]
 
 @item In Sawfish-UI position parameters can be negative [Christopher Bratusek, Teika Kazura]
+
+@item In Simple theme windows are now resizable from right border [Christopher Bratusek]
 @end itemize
 @item New features:
 @itemize @minus
