@@ -1,3 +1,6 @@
+2009-09-01  Christopher Bratusek <zanghar@freenet.de>
+	* themes/simple/theme.jl: make windows resizable from right border
+
 2009-08-31  Christopher Bratusek <zanghar@freenet.de>
 	* CONTRIBUTING: Encoding is changed to utf-8 from latin-1 [Teika Kazura]
 
